--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ main > h1 {
 
 main > article {
     text-align: center;
+    text
 }
 
 main > article > div#impressoras {
@@ -113,21 +114,50 @@ main > article > div#esteira_de_afericao {
     padding: 10px;
 }
 
-main > article > div {
-    margin: 30px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.185);
-    width: 165px;
-    height: 205px;
-    display: inline-block;
-}
-
 main > article > div#dimensionador {
     margin: 30px;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.185);
     width: 165px;
     height: 205px;
     display: inline-block;
-    padding-top: 10px;
+    padding: 10px;
+}
+
+main > article > div#esteira_flexivel {
+    margin: 30px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.185);
+    width: 165px;
+    height: 205px;
+    display: inline-block;
+    padding: 10px;
+}
+
+main > article > div#dimensionador > p {
+    padding: auto;
+    margin: 20px 0px;
+}
+
+main > article > div#esteira_de_afericao > p {
+    padding: auto;
+    margin: 20px 0px;
+}
+
+main > article > div#impressoras > p {
+    padding: auto;
+    margin: auto;
+}
+
+main > article > div#esteira_flexivel > p {
+    padding: auto;
+    margin: 20px 0px;
+}
+
+main > article > div {
+    margin: 30px;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.185);
+    width: 165px;
+    height: 205px;
+    display: inline-block;
 }
 
 main > article > div > a > img {
